--- a/app/views/psd-revised-flow/case-created-confirmation.html
+++ b/app/views/psd-revised-flow/case-created-confirmation.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <p class="govuk-body">The case will now appear in <a href="case-trading-stds-landing-new-case.html" class="govuk-link govuk-link--no-visited-state">your cases list</a>.</p>
+        <p class="govuk-body">The case will now appear in <a href="/cases/your-cases" class="govuk-link govuk-link--no-visited-state">your cases list</a>.</p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
