--- a/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
@@ -180,9 +180,9 @@
             Safety and compliance
         </h3>
         
-        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+        <!--a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>                              
+        </a-->                              
 
         <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
@@ -202,11 +202,13 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                    <span class="govuk-!-font-size-16">
+                        Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                    </span>
                 </dd>
             </div>
         </dl>
@@ -249,7 +251,7 @@
             </dl>
         </section>
 
-        <p class="govuk-body-s govuk-!-margin-top-7 govuk-!-margin-bottom-2 opss-secondary-text">Only teams added to the case with editing rights can edit the case.</p>
+        <p class="govuk-body-s govuk-!-margin-top-7 govuk-!-margin-bottom-2 opss-secondary-text opss-text-align-right">Only teams added to the case with editing rights can edit the case.</p>
 
     </section>
 
