--- a/app/views/psd-revised-flow/inc_case_content_1.html
+++ b/app/views/psd-revised-flow/inc_case_content_1.html
@@ -39,7 +39,7 @@
         </dl>
 
         <div class="govuk-!-padding-top-1 govuk-!-padding-bottom-1 opss-grouping">
-            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Status
