--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -82,7 +82,7 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-is-the-product-of-concern.html" target="_blank">Why is the product of concern?
                 </a>
-                <br><span class="govuk-!-font-size-16">This splits the current 'Why are you reporting this product?' page over two pages. <br>If 'safe and compliant' is selected then this case <b>can only include one product record</b></span>.
+                <br><span class="govuk-!-font-size-16">This splits the current 'Why are you reporting this product?' page over two pages</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
@@ -161,12 +161,27 @@
                             
                         </ul>
                     </li>
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/edit-reference-number.html" target="_blank">Edit the reference number</a>
+                        <br><span class="govuk-!-font-size-16">The 'Edit' link on the Reference number row (Trading standards) opens this page. (No form validation is required on the edit reference number form, as users may want to remove a number - leaving it blank and may want to incorporate letters).  <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-updated.html" target="_blank">Save</a> - returns the case page with a success banner</span>.
+                    </li>                     
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/edit-summary.html" target="_blank">Edit the summary</a>
+                        <br><span class="govuk-!-font-size-16">The 'Edit' link on the <a href="/psd-revised-flow/case-trading-stds-landing-summary.html"class="govuk-link govuk-link--no-visited-state" target="_blank">Summery</a> row opens this page. (No form validation is required on the edit summary form).  <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-updated.html" target="_blank">Save</a> - returns the case page with a success banner</span>. 
+                        
+                        <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                            <li>
+                                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-summary-added.html" target="_blank">Case page - updated with a summary</a>
+                                <br><span class="govuk-!-font-size-16">Shows the small text summary text</span>.
+                            </li>
+                        </ul>
+                    </li>                    
 
                 </ul>                
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-different-team.html" target="_blank">Case page - visitor</a>
-                <br><span class="govuk-!-font-size-16">Different team viewing the case without owning the case or having been invited. Click 'Products' ...</span>.
+                <br><span class="govuk-!-font-size-16">Anyone (anyteam) viewing a case without owning the case or having been invited. Click 'Products' ...</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
@@ -181,7 +196,7 @@
             </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-new-case.html" target="_blank">Case page - newly created</a>
-                <br><span class="govuk-!-font-size-16">Shows the case page freshly created with only the standard data gained from the case creation process</span>.
+                <br><span class="govuk-!-font-size-16">Shows the case page freshly created with only the standard data gained from the case creation process. ('Teams added': if one team shown there is no bullet list). ('Case updated': is blank)</span>.
             </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/#" target="_blank">Case page - restricted view</a>
