--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -67,7 +67,7 @@
             </strong>
         </div>
 -->
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -183,7 +183,7 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the teams added</span>
+                        Change<span class="govuk-visually-hidden"> the teams added</span>
                     </a>
                 </dd>
             </div>
@@ -238,7 +238,7 @@
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -246,11 +246,11 @@
                 <dd class="govuk-summary-list__value">
                     Product reported as unsafe
                 </dd>
-                <dd class="govuk-summary-list__actions">
+                <!--dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the report reason</span>
                     </a>
-                </dd>
+                </dd-->
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -261,17 +261,19 @@
                                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                    <span class="govuk-!-font-size-16">
+                        Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                    </span>
                 </dd>
-                <dd class="govuk-summary-list__actions">
+                <!--dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the hazard description</span>
                     </a>
-                </dd>
+                </dd-->
             </div>
         </dl>
 <!-- this appears when this information is available and the anchor link appears in the nav 
@@ -279,7 +281,7 @@
             Case specific product information
         </h3>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
