--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -58,7 +58,7 @@
             </strong>
         </div>
 -->
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -182,7 +182,7 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the teams added</span>
+                        Change<span class="govuk-visually-hidden"> the teams added</span>
                     </a>
                 </dd>
             </div>
@@ -237,7 +237,7 @@
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                     Reported as
