--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -68,7 +68,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -166,7 +166,7 @@
                     Case owner
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Renfrewshire Council
+                    Darren Harridence - Renfrewshire Council
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -179,15 +179,13 @@
                     Teams added
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>
+
                             Renfrewshire Council
-                        </li>
-                    </ul>
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the teams added</span>
+                        Change<span class="govuk-visually-hidden"> the teams added</span>
                     </a>
                 </dd>
             </div>
@@ -245,7 +243,7 @@
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -278,7 +276,7 @@
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">A product has not been added to this case</h4>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
