--- a/app/views/psd-revised-flow/case-trading-stds-landing-updated.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-updated.html
@@ -72,7 +72,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -170,7 +170,7 @@
                     Case owner
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Renfrewshire Council
+                    Darren Harridence - Renfrewshire Council
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -194,7 +194,7 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the teams added</span>
+                        Change<span class="govuk-visually-hidden"> the teams added</span>
                     </a>
                 </dd>
             </div>
@@ -258,7 +258,7 @@
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -291,7 +291,7 @@
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">Asda washing up liquid</h4>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
