--- a/app/views/psd-revised-flow/case-trading-stds-landing-email-alert.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-email-alert.html
@@ -102,11 +102,12 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+                                        
+                    <!-- opss user: what is being alleged, shows here on current service -->
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>
+                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
                     </a>
                 </dd>
             </div>            
@@ -218,24 +219,13 @@
                     </a>
                 </dd>
             </div>
-            <!--div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Risk level validated</dt>
-                <dd class="govuk-summary-list__value">No</dd>
-            </div-->
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    COVID-19
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the coronavirus status</span>
-                    </a>
-                </dd>
-            </div>
         </dl>
+
+        <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
+                Create an email alert
+            </a>
+        </div>
 
         <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
@@ -243,11 +233,11 @@
         
         <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>
+        </a>                              
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -260,10 +250,10 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Electric shock
-                </dd>
+                                </dd>
             </div>
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
