--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -285,8 +285,8 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Batch numbers</span>
+                                        <a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>  
@@ -298,8 +298,8 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Customs codes</span>
+                    <a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>
@@ -311,8 +311,8 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the units affected</span>
+                    <a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>              
