--- a/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
@@ -291,8 +291,8 @@
                     <span class="opss-no-wrap">B3736-33QY</span>, <span class="opss-no-wrap">D9887-31ZY</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Batch numbers</span>
+                                        <a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>  
@@ -301,11 +301,11 @@
                     Customs codes
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <span class="opss-no-wrap">97888-319</span>
+                    <span class="opss-no-wrap">8335 80 91</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Customs codes</span>
+                    <a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>
@@ -314,11 +314,11 @@
                     Units affected
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    22000 
+                    22000 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Exact number</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the units affected</span>
+                    <a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>              
