--- a/app/views/psd-revised-flow/what-is-the-case-name-error.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name-error.html
@@ -63,7 +63,7 @@
           Save
         </button>
       
-        <a class="govuk-link" href="#">Cancel</a><!-- do not create a case return to 'Your cases' page -->
+        <a class="govuk-link govuk-link--no-visited-state" href="#">Cancel</a><!-- do not create a case return to 'Your cases' page -->
     </div>     
 
 </form>
