--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -290,8 +290,8 @@
                     B2669-233 
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Batch numbers</span>
+                                        <a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>  
@@ -303,8 +303,8 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Customs codes</span>
+                    <a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>
@@ -316,8 +316,8 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the units affected</span>
+                    <a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
                     </a>
                 </dd>                
             </div>              
